<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/idSurvey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/id"
        android:textSize="15sp"
        android:fontFamily="casual"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/dateSurvey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/date"
        android:textSize="15sp"
        android:fontFamily="casual"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/survey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/survey"
        android:textSize="15sp"
        android:fontFamily="casual"
        android:textColor="@color/black"/>
</LinearLayout>
