<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loggingTitle"
        android:textColor="@color/red"
        android:textSize="40sp"
        android:fontFamily="casual"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:fontFamily="casual"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/eLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:fontFamily="casual"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:fontFamily="casual"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/ePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:fontFamily="casual"
        android:textColor="@color/black"
        android:password="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/bLogin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@color/red"
            android:fontFamily="casual"
            android:text="@string/blogin"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bRegister"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:fontFamily="casual"
            android:text="@string/bregister"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
